{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 565,
  "lineage": "3d350e82-d240-1341-769c-3f7bae3bfd0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "untrusted_il_to_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:transit-gateway-attachment/tgw-attach-09f762190f729318e",
            "id": "tgw-attach-09f762190f729318e",
            "peer_account_id": "728951503198",
            "peer_region": "eu-west-1",
            "peer_transit_gateway_id": "tgw-0d8d2bb629667b210",
            "state": "available",
            "tags": {
              "Name": "poc-untrusted-il-to-eu-tgw-peering"
            },
            "tags_all": {
              "Name": "poc-untrusted-il-to-eu-tgw-peering"
            },
            "transit_gateway_id": "tgw-09c5299d2037664e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.remote_iot_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "eu_accepts_il",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-09f762190f729318e",
            "peer_account_id": "728951503198",
            "peer_region": "il-central-1",
            "peer_transit_gateway_id": "tgw-09c5299d2037664e9",
            "tags": {
              "Name": "poc-eu-tgw-peering-accepter"
            },
            "tags_all": {
              "Name": "poc-eu-tgw-peering-accepter"
            },
            "transit_gateway_attachment_id": "tgw-attach-09f762190f729318e",
            "transit_gateway_id": "tgw-0d8d2bb629667b210"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway_peering_attachment.untrusted_il_to_eu",
            "data.aws_caller_identity.current",
            "module.remote_iot_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "untrusted_eu_to_il_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.17.16.0/20",
            "id": "tgw-rtb-048e019e393d59bd1_172.17.16.0/20",
            "transit_gateway_attachment_id": "tgw-attach-09f762190f729318e",
            "transit_gateway_route_table_id": "tgw-rtb-048e019e393d59bd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway_peering_attachment.untrusted_il_to_eu",
            "aws_ec2_transit_gateway_peering_attachment_accepter.eu_accepts_il",
            "data.aws_caller_identity.current",
            "module.remote_iot_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "untrusted_il_to_eu_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.18.30.0/24",
            "id": "tgw-rtb-0cb6d8cd6a74edb87_172.18.30.0/24",
            "transit_gateway_attachment_id": "tgw-attach-09f762190f729318e",
            "transit_gateway_route_table_id": "tgw-rtb-0cb6d8cd6a74edb87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway_peering_attachment.untrusted_il_to_eu",
            "aws_ec2_transit_gateway_peering_attachment_accepter.eu_accepts_il",
            "data.aws_caller_identity.current",
            "module.remote_iot_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "trusted_scrub_to_untrusted_scrub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.22.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044930285aadf558f2538394945",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044930285aadf558f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ec858bb6718ecb06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.untrusted_scrub_to_trusted_scrub",
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_streaming_scrub.aws_eip.nat",
            "module.trusted_vpc_streaming_scrub.aws_internet_gateway.this",
            "module.trusted_vpc_streaming_scrub.aws_nat_gateway.nat",
            "module.trusted_vpc_streaming_scrub.aws_route_table.private",
            "module.trusted_vpc_streaming_scrub.aws_route_table.public",
            "module.trusted_vpc_streaming_scrub.aws_route_table_association.public",
            "module.trusted_vpc_streaming_scrub.aws_subnet.this",
            "module.trusted_vpc_streaming_scrub.aws_vpc.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "untrusted_scrub_to_trusted_scrub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.13.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01f1cb71a35da17882055407674",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f1cb71a35da1788",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ec858bb6718ecb06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.untrusted_scrub_to_trusted_scrub",
            "module.trusted_vpc_streaming_scrub.aws_vpc.this",
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_streaming_scrub.aws_eip.nat",
            "module.untrusted_vpc_streaming_scrub.aws_internet_gateway.this",
            "module.untrusted_vpc_streaming_scrub.aws_nat_gateway.nat",
            "module.untrusted_vpc_streaming_scrub.aws_route_table.private",
            "module.untrusted_vpc_streaming_scrub.aws_route_table.public",
            "module.untrusted_vpc_streaming_scrub.aws_route_table_association.public",
            "module.untrusted_vpc_streaming_scrub.aws_subnet.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trusted_vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-013fe9b8531f3fbb2",
            "description": "Allow inbound traffic from specific trusted VPCs to the VPN endpoint",
            "egress": [],
            "id": "sg-013fe9b8531f3fbb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.14.0/24",
                  "172.16.13.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "poc-trusted-vpn-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "untrusted_vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-0a0ec065870026bc4",
            "description": "Allow inbound traffic from untrusted VPCs to the VPN endpoint",
            "egress": [],
            "id": "sg-0a0ec065870026bc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.24.0/24",
                  "172.17.23.0/24",
                  "172.17.21.0/24",
                  "172.17.22.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "poc-untrusted-vpn-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "untrusted_scrub_to_trusted_scrub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0ec858bb6718ecb06",
            "peer_owner_id": "728951503198",
            "peer_region": "il-central-1",
            "peer_vpc_id": "vpc-0b92153d960b2ed77",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "poc-untrusted-to-trusted-scrub-peering"
            },
            "tags_all": {
              "Name": "poc-untrusted-to-trusted-scrub-peering"
            },
            "vpc_id": "vpc-0573e2991b5906dbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_streaming_scrub.aws_vpc.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.remote_iot_tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64514,
            "arn": "arn:aws:ec2:eu-west-1:728951503198:transit-gateway/tgw-0d8d2bb629667b210",
            "association_default_route_table_id": "tgw-rtb-048e019e393d59bd1",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "TGW for Remote EU IoT VPC",
            "dns_support": "enable",
            "id": "tgw-0d8d2bb629667b210",
            "multicast_support": "disable",
            "owner_id": "728951503198",
            "propagation_default_route_table_id": "tgw-rtb-048e019e393d59bd1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "poc-remote-iot"
            },
            "tags_all": {
              "Name": "poc-remote-iot"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.remote_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728951503198:route-table/rtb-0b609773f791e3795",
            "id": "rtb-0b609773f791e3795",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-poc-remote-iot-core-private"
            },
            "tags_all": {
              "Name": "rt-poc-remote-iot-core-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af1848d8d8dd02a7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.remote_iot_tgw.aws_ec2_transit_gateway.this",
            "module.remote_vpc_iot.aws_eip.nat",
            "module.remote_vpc_iot.aws_internet_gateway.this",
            "module.remote_vpc_iot.aws_nat_gateway.nat",
            "module.remote_vpc_iot.aws_route_table.public",
            "module.remote_vpc_iot.aws_route_table_association.public",
            "module.remote_vpc_iot.aws_subnet.this",
            "module.remote_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.remote_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07affeaded7e5803c",
            "route_table_id": "rtb-0b609773f791e3795",
            "subnet_id": "subnet-0fc08619d475c846c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.remote_iot_tgw.aws_ec2_transit_gateway.this",
            "module.remote_vpc_iot.aws_eip.nat",
            "module.remote_vpc_iot.aws_internet_gateway.this",
            "module.remote_vpc_iot.aws_nat_gateway.nat",
            "module.remote_vpc_iot.aws_route_table.private",
            "module.remote_vpc_iot.aws_route_table.public",
            "module.remote_vpc_iot.aws_route_table_association.public",
            "module.remote_vpc_iot.aws_subnet.this",
            "module.remote_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.remote_vpc_iot",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728951503198:subnet/subnet-0fc08619d475c846c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.18.30.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc08619d475c846c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-remote-iot-core-app"
            },
            "tags_all": {
              "Name": "poc-remote-iot-core-app"
            },
            "vpc_id": "vpc-0af1848d8d8dd02a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.remote_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.remote_vpc_iot",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].remote",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:728951503198:vpc/vpc-0af1848d8d8dd02a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.30.0/24",
            "default_network_acl_id": "acl-0683ef85f15f4e05d",
            "default_route_table_id": "rtb-008e77b6b1b8a21c4",
            "default_security_group_id": "sg-0815b3bc0ba8e2561",
            "dhcp_options_id": "dopt-0df92c6b4464d6b85",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af1848d8d8dd02a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008e77b6b1b8a21c4",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-remote-iot-core"
            },
            "tags_all": {
              "Name": "poc-remote-iot-core"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_ado_agent",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec793dddc766d9ac",
            "arn": "arn:aws:ec2:il-central-1:728951503198:instance/i-0ac1c5de4942615ec",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-trusted-ado-agent-profile",
            "id": "i-0ac1c5de4942615ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sky-trusted",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0841f78e9cd687be8",
            "private_dns": "ip-172-16-14-41.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.14.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddec44624df87c10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cea0dddd0c5f5b9",
            "tags": {
              "Name": "poc-trusted-ado-agent"
            },
            "tags_all": {
              "Name": "poc-trusted-ado-agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f625917b94558ca3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_ado_agent.aws_iam_instance_profile.ec2_profile",
            "module.trusted_ado_agent.aws_iam_role.ec2_role",
            "module.trusted_ado_agent.aws_security_group.this",
            "module.trusted_ado_agent.data.aws_ami.selected",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_ado_agent",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-0f625917b94558ca3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f625917b94558ca3",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-trusted-ado-agent-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-trusted-ado-agent-sg"
            },
            "tags_all": {
              "Name": "poc-trusted-ado-agent-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_scrub_docker_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec793dddc766d9ac",
            "arn": "arn:aws:ec2:il-central-1:728951503198:instance/i-048bdb22e58fb09e6",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-trusted-scrub-host-profile",
            "id": "i-048bdb22e58fb09e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sky-trusted",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a72309034feea39",
            "private_dns": "ip-172-16-13-9.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.13.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac431f39cd99c591",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb849162689de946",
            "tags": {
              "Name": "poc-trusted-scrub-host"
            },
            "tags_all": {
              "Name": "poc-trusted-scrub-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01235fad3599eab44"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_scrub_docker_host.aws_iam_instance_profile.ec2_profile",
            "module.trusted_scrub_docker_host.aws_iam_role.ec2_role",
            "module.trusted_scrub_docker_host.aws_security_group.this",
            "module.trusted_scrub_docker_host.data.aws_ami.selected",
            "module.trusted_vpc_streaming_scrub.aws_subnet.this",
            "module.trusted_vpc_streaming_scrub.aws_vpc.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_scrub_docker_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-01235fad3599eab44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01235fad3599eab44",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.22.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.30.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-trusted-scrub-host-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-trusted-scrub-host-sg"
            },
            "tags_all": {
              "Name": "poc-trusted-scrub-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92153d960b2ed77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_streaming_scrub.aws_vpc.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_streaming_docker_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec793dddc766d9ac",
            "arn": "arn:aws:ec2:il-central-1:728951503198:instance/i-00a3e04cff1bb8a53",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-trusted-streaming-host-profile",
            "id": "i-00a3e04cff1bb8a53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sky-trusted",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a6c47a6278b3e47",
            "private_dns": "ip-172-16-12-29.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.12.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055fd3ab3fd87a88c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a732da120855b9d6",
            "tags": {
              "Name": "poc-trusted-streaming-host"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00de232015bcef73e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_streaming_docker_host.aws_iam_instance_profile.ec2_profile",
            "module.trusted_streaming_docker_host.aws_iam_role.ec2_role",
            "module.trusted_streaming_docker_host.aws_security_group.this",
            "module.trusted_streaming_docker_host.data.aws_ami.selected",
            "module.trusted_vpc_streaming.aws_subnet.this",
            "module.trusted_vpc_streaming.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_streaming_docker_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-00de232015bcef73e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00de232015bcef73e",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-trusted-streaming-host-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-trusted-streaming-host-sg"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c235d8623749f013"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_streaming.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:il-central-1:728951503198:transit-gateway/tgw-051432bce2b5076c0",
            "association_default_route_table_id": "tgw-rtb-0ff765fc8e988d4ed",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "TGW for the Trusted IL Environment",
            "dns_support": "enable",
            "id": "tgw-051432bce2b5076c0",
            "multicast_support": "disable",
            "owner_id": "728951503198",
            "propagation_default_route_table_id": "tgw-rtb-0ff765fc8e988d4ed",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "poc-trusted"
            },
            "tags_all": {
              "Name": "poc-trusted"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ca69bd17ac4ed12",
            "arn": "arn:aws:ec2:il-central-1:728951503198:elastic-ip/eipalloc-04ca69bd17ac4ed12",
            "association_id": "eipassoc-041bbe6fca28a8bbd",
            "domain": "vpc",
            "id": "eipalloc-04ca69bd17ac4ed12",
            "network_border_group": "il-central-1",
            "network_interface": "eni-046fcf9f3a33a2c92",
            "private_dns": "ip-172-16-14-25.il-central-1.compute.internal",
            "private_ip": "172.16.14.25",
            "public_dns": "ec2-51-84-45-91.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.45.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-poc-trusted-devops"
            },
            "tags_all": {
              "Name": "eip-nat-poc-trusted-devops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:internet-gateway/igw-01dff358e7cb6b1b6",
            "id": "igw-01dff358e7cb6b1b6",
            "owner_id": "728951503198",
            "tags": {
              "Name": "igw-poc-trusted-devops"
            },
            "tags_all": {
              "Name": "igw-poc-trusted-devops"
            },
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ca69bd17ac4ed12",
            "association_id": "eipassoc-041bbe6fca28a8bbd",
            "connectivity_type": "public",
            "id": "nat-031926518cc80290c",
            "network_interface_id": "eni-046fcf9f3a33a2c92",
            "private_ip": "172.16.14.25",
            "public_ip": "51.84.45.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4af3ccb676cf03c",
            "tags": {
              "Name": "nat-poc-trusted-devops"
            },
            "tags_all": {
              "Name": "nat-poc-trusted-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_eip.nat",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_route_table_association.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-075724b6a52014ba3",
            "id": "rtb-075724b6a52014ba3",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031926518cc80290c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-trusted-devops-private"
            },
            "tags_all": {
              "Name": "rt-poc-trusted-devops-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_eip.nat",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_nat_gateway.nat",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_route_table_association.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-01c97a03e7cb7d5bd",
            "id": "rtb-01c97a03e7cb7d5bd",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dff358e7cb6b1b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-trusted-devops-public"
            },
            "tags_all": {
              "Name": "rt-poc-trusted-devops-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c92d13b1c79e39b4",
            "route_table_id": "rtb-075724b6a52014ba3",
            "subnet_id": "subnet-00cea0dddd0c5f5b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_eip.nat",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_nat_gateway.nat",
            "module.trusted_vpc_devops.aws_route_table.private",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_route_table_association.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        },
        {
          "index_key": "endpoints",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0402eb7078434b009",
            "route_table_id": "rtb-075724b6a52014ba3",
            "subnet_id": "subnet-052967091d8e6a631"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_eip.nat",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_nat_gateway.nat",
            "module.trusted_vpc_devops.aws_route_table.private",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_route_table_association.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6130f1e87988cc7",
            "route_table_id": "rtb-01c97a03e7cb7d5bd",
            "subnet_id": "subnet-0f4af3ccb676cf03c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-00cea0dddd0c5f5b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.14.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cea0dddd0c5f5b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-devops-agent"
            },
            "tags_all": {
              "Name": "poc-trusted-devops-agent"
            },
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        },
        {
          "index_key": "endpoints",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-052967091d8e6a631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.14.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052967091d8e6a631",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-devops-endpoints"
            },
            "tags_all": {
              "Name": "poc-trusted-devops-endpoints"
            },
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-0f4af3ccb676cf03c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.14.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4af3ccb676cf03c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-devops-nat"
            },
            "tags_all": {
              "Name": "poc-trusted-devops-nat"
            },
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-06e3dc0b8fd743526",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.14.0/24",
            "default_network_acl_id": "acl-08e1ae9b34be376d7",
            "default_route_table_id": "rtb-0aafef759f8364c2c",
            "default_security_group_id": "sg-0f40cf9b37cf7a1ff",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e3dc0b8fd743526",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aafef759f8364c2c",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-trusted-devops"
            },
            "tags_all": {
              "Name": "poc-trusted-devops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_vpc_devops",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc-endpoint/vpce-04dae552a35e6d82d",
            "dns_entry": [
              {
                "dns_name": "vpce-04dae552a35e6d82d-4xxw36j9.api.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-04dae552a35e6d82d-4xxw36j9-il-central-1a.api.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "api.ecr.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z061489011ZET3MN4O53B"
              },
              {
                "dns_name": "ecr.il-central-1.api.aws",
                "hosted_zone_id": "Z0622029217U1GOMO8EB1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04dae552a35e6d82d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-050274ad7474a5001"
            ],
            "owner_id": "728951503198",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::728951503198:root\"},\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f40cf9b37cf7a1ff"
            ],
            "service_name": "com.amazonaws.il-central-1.ecr.api",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.14.86",
                "subnet_id": "subnet-052967091d8e6a631"
              }
            ],
            "subnet_ids": [
              "subnet-052967091d8e6a631"
            ],
            "tags": {
              "Name": "vpce-poc-trusted-devops-ecr-api"
            },
            "tags_all": {
              "Name": "vpce-poc-trusted-devops-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_eip.nat",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_nat_gateway.nat",
            "module.trusted_vpc_devops.aws_route_table.private",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_route_table_association.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this",
            "module.trusted_vpc_devops.data.aws_caller_identity.current",
            "module.trusted_vpc_devops.data.aws_iam_policy_document.vpc_endpoint_policy"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc-endpoint/vpce-06837eb98797c09e4",
            "dns_entry": [
              {
                "dns_name": "vpce-06837eb98797c09e4-b9i1baw1.dkr.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-06837eb98797c09e4-b9i1baw1-il-central-1a.dkr.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "dkr.ecr.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z06207262GF3AZ4YB13Q2"
              },
              {
                "dns_name": "*.dkr.ecr.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z06207262GF3AZ4YB13Q2"
              },
              {
                "dns_name": "dkr-ecr.il-central-1.on.aws",
                "hosted_zone_id": "Z09507943JG3C3MAMEYOB"
              },
              {
                "dns_name": "*.dkr-ecr.il-central-1.on.aws",
                "hosted_zone_id": "Z09507943JG3C3MAMEYOB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06837eb98797c09e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-015f55baa0480b2f8"
            ],
            "owner_id": "728951503198",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::728951503198:root\"},\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f40cf9b37cf7a1ff"
            ],
            "service_name": "com.amazonaws.il-central-1.ecr.dkr",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.14.88",
                "subnet_id": "subnet-052967091d8e6a631"
              }
            ],
            "subnet_ids": [
              "subnet-052967091d8e6a631"
            ],
            "tags": {
              "Name": "vpce-poc-trusted-devops-ecr-dkr"
            },
            "tags_all": {
              "Name": "vpce-poc-trusted-devops-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06e3dc0b8fd743526"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_devops.aws_eip.nat",
            "module.trusted_vpc_devops.aws_internet_gateway.this",
            "module.trusted_vpc_devops.aws_nat_gateway.nat",
            "module.trusted_vpc_devops.aws_route_table.private",
            "module.trusted_vpc_devops.aws_route_table.public",
            "module.trusted_vpc_devops.aws_route_table_association.public",
            "module.trusted_vpc_devops.aws_subnet.this",
            "module.trusted_vpc_devops.aws_vpc.this",
            "module.trusted_vpc_devops.data.aws_caller_identity.current",
            "module.trusted_vpc_devops.data.aws_iam_policy_document.vpc_endpoint_policy"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-0cbe401350a4c074b",
            "id": "rtb-0cbe401350a4c074b",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-poc-trusted-iot-management-private"
            },
            "tags_all": {
              "Name": "rt-poc-trusted-iot-management-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf462c4bf12f1aa2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_iot.aws_eip.nat",
            "module.trusted_vpc_iot.aws_internet_gateway.this",
            "module.trusted_vpc_iot.aws_nat_gateway.nat",
            "module.trusted_vpc_iot.aws_route_table.public",
            "module.trusted_vpc_iot.aws_route_table_association.public",
            "module.trusted_vpc_iot.aws_subnet.this",
            "module.trusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edff95daf036c526",
            "route_table_id": "rtb-0cbe401350a4c074b",
            "subnet_id": "subnet-054f96641576e8f4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_iot.aws_eip.nat",
            "module.trusted_vpc_iot.aws_internet_gateway.this",
            "module.trusted_vpc_iot.aws_nat_gateway.nat",
            "module.trusted_vpc_iot.aws_route_table.private",
            "module.trusted_vpc_iot.aws_route_table.public",
            "module.trusted_vpc_iot.aws_route_table_association.public",
            "module.trusted_vpc_iot.aws_subnet.this",
            "module.trusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_iot",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-054f96641576e8f4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.11.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054f96641576e8f4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-iot-management-app"
            },
            "tags_all": {
              "Name": "poc-trusted-iot-management-app"
            },
            "vpc_id": "vpc-0bf462c4bf12f1aa2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_iot",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0bf462c4bf12f1aa2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.11.0/24",
            "default_network_acl_id": "acl-07796cbafe01c0048",
            "default_route_table_id": "rtb-06b77ddbb4df3fa49",
            "default_security_group_id": "sg-00781e9fdf8f9cd97",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf462c4bf12f1aa2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b77ddbb4df3fa49",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-trusted-iot-management"
            },
            "tags_all": {
              "Name": "poc-trusted-iot-management"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_vpc_jacob",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-0059f2bffd6090334",
            "id": "rtb-0059f2bffd6090334",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-poc-trusted-jacob-api-gw-private"
            },
            "tags_all": {
              "Name": "rt-poc-trusted-jacob-api-gw-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8fdb98a2ab67165"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_jacob.aws_eip.nat",
            "module.trusted_vpc_jacob.aws_internet_gateway.this",
            "module.trusted_vpc_jacob.aws_nat_gateway.nat",
            "module.trusted_vpc_jacob.aws_route_table.public",
            "module.trusted_vpc_jacob.aws_route_table_association.public",
            "module.trusted_vpc_jacob.aws_subnet.this",
            "module.trusted_vpc_jacob.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_jacob",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0440314074e0582de",
            "route_table_id": "rtb-0059f2bffd6090334",
            "subnet_id": "subnet-08d6c27532481f0aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_jacob.aws_eip.nat",
            "module.trusted_vpc_jacob.aws_internet_gateway.this",
            "module.trusted_vpc_jacob.aws_nat_gateway.nat",
            "module.trusted_vpc_jacob.aws_route_table.private",
            "module.trusted_vpc_jacob.aws_route_table.public",
            "module.trusted_vpc_jacob.aws_route_table_association.public",
            "module.trusted_vpc_jacob.aws_subnet.this",
            "module.trusted_vpc_jacob.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_jacob",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-08d6c27532481f0aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.10.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d6c27532481f0aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-jacob-api-gw-app"
            },
            "tags_all": {
              "Name": "poc-trusted-jacob-api-gw-app"
            },
            "vpc_id": "vpc-0e8fdb98a2ab67165"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_jacob.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_jacob",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0e8fdb98a2ab67165",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.10.0/24",
            "default_network_acl_id": "acl-0943281d440833eac",
            "default_route_table_id": "rtb-0aa21a463fa61a380",
            "default_security_group_id": "sg-0da6f4d14e431bdbd",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8fdb98a2ab67165",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa21a463fa61a380",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-trusted-jacob-api-gw"
            },
            "tags_all": {
              "Name": "poc-trusted-jacob-api-gw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-0b4cc4eca001a3f0d",
            "id": "rtb-0b4cc4eca001a3f0d",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-poc-trusted-streaming-vod-private"
            },
            "tags_all": {
              "Name": "rt-poc-trusted-streaming-vod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c235d8623749f013"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_streaming.aws_eip.nat",
            "module.trusted_vpc_streaming.aws_internet_gateway.this",
            "module.trusted_vpc_streaming.aws_nat_gateway.nat",
            "module.trusted_vpc_streaming.aws_route_table.public",
            "module.trusted_vpc_streaming.aws_route_table_association.public",
            "module.trusted_vpc_streaming.aws_subnet.this",
            "module.trusted_vpc_streaming.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c704c03d60b584e",
            "route_table_id": "rtb-0b4cc4eca001a3f0d",
            "subnet_id": "subnet-0a732da120855b9d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_streaming.aws_eip.nat",
            "module.trusted_vpc_streaming.aws_internet_gateway.this",
            "module.trusted_vpc_streaming.aws_nat_gateway.nat",
            "module.trusted_vpc_streaming.aws_route_table.private",
            "module.trusted_vpc_streaming.aws_route_table.public",
            "module.trusted_vpc_streaming.aws_route_table_association.public",
            "module.trusted_vpc_streaming.aws_subnet.this",
            "module.trusted_vpc_streaming.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-0a732da120855b9d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.12.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a732da120855b9d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-streaming-vod-app"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-vod-app"
            },
            "vpc_id": "vpc-0c235d8623749f013"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_streaming.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0c235d8623749f013",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.12.0/24",
            "default_network_acl_id": "acl-0fcff8d4c0af31fab",
            "default_route_table_id": "rtb-058e24c70199ef409",
            "default_security_group_id": "sg-0c28d7b388c38dd74",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c235d8623749f013",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058e24c70199ef409",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-trusted-streaming-vod"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-vod"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:network-acl/acl-0fb4c424f3705713b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb4c424f3705713b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 9999,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 10099,
                "to_port": 9999
              },
              {
                "action": "allow",
                "cidr_block": "172.30.0.0/22",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              }
            ],
            "owner_id": "728951503198",
            "subnet_ids": [
              "subnet-0fb849162689de946"
            ],
            "tags": {
              "Name": "poc-trusted-streaming-scrub-nacl"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-scrub-nacl"
            },
            "vpc_id": "vpc-0b92153d960b2ed77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_streaming_scrub.aws_subnet.this",
            "module.trusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-044930285aadf558f",
            "id": "rtb-044930285aadf558f",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.22.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0ec858bb6718ecb06"
              }
            ],
            "tags": {
              "Name": "rt-poc-trusted-streaming-scrub-private"
            },
            "tags_all": {
              "Name": "rt-poc-trusted-streaming-scrub-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92153d960b2ed77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_streaming_scrub.aws_eip.nat",
            "module.trusted_vpc_streaming_scrub.aws_internet_gateway.this",
            "module.trusted_vpc_streaming_scrub.aws_nat_gateway.nat",
            "module.trusted_vpc_streaming_scrub.aws_route_table.public",
            "module.trusted_vpc_streaming_scrub.aws_route_table_association.public",
            "module.trusted_vpc_streaming_scrub.aws_subnet.this",
            "module.trusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09681d2c1ff057c75",
            "route_table_id": "rtb-044930285aadf558f",
            "subnet_id": "subnet-0fb849162689de946"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_tgw.aws_ec2_transit_gateway.this",
            "module.trusted_vpc_streaming_scrub.aws_eip.nat",
            "module.trusted_vpc_streaming_scrub.aws_internet_gateway.this",
            "module.trusted_vpc_streaming_scrub.aws_nat_gateway.nat",
            "module.trusted_vpc_streaming_scrub.aws_route_table.private",
            "module.trusted_vpc_streaming_scrub.aws_route_table.public",
            "module.trusted_vpc_streaming_scrub.aws_route_table_association.public",
            "module.trusted_vpc_streaming_scrub.aws_subnet.this",
            "module.trusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-0fb849162689de946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.16.13.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb849162689de946",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-trusted-streaming-scrub-app"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-scrub-app"
            },
            "vpc_id": "vpc-0b92153d960b2ed77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.trusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.trusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0b92153d960b2ed77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.13.0/24",
            "default_network_acl_id": "acl-0908fd2e15e658e3f",
            "default_route_table_id": "rtb-0d3971408a89634ec",
            "default_security_group_id": "sg-0fee3f5f26459e696",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b92153d960b2ed77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3971408a89634ec",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-trusted-streaming-scrub"
            },
            "tags_all": {
              "Name": "poc-trusted-streaming-scrub"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_devops_agent",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec793dddc766d9ac",
            "arn": "arn:aws:ec2:il-central-1:728951503198:instance/i-0225d75ea3cfba434",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-untrusted-devops-agent-profile",
            "id": "i-0225d75ea3cfba434",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sky-untrusted",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0906e50d75ae409a4",
            "private_dns": "ip-172-17-24-62.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.24.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b19e7d8ad230ace2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02745e545c814672b",
            "tags": {
              "Name": "poc-untrusted-devops-agent"
            },
            "tags_all": {
              "Name": "poc-untrusted-devops-agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0907a47e04e3e7c25"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_devops_agent.aws_iam_instance_profile.ec2_profile",
            "module.untrusted_devops_agent.aws_iam_role.ec2_role",
            "module.untrusted_devops_agent.aws_security_group.this",
            "module.untrusted_devops_agent.data.aws_ami.selected",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_devops_agent",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-0907a47e04e3e7c25",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0907a47e04e3e7c25",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-untrusted-devops-agent-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-untrusted-devops-agent-sg"
            },
            "tags_all": {
              "Name": "poc-untrusted-devops-agent-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_ingress_docker_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec793dddc766d9ac",
            "arn": "arn:aws:ec2:il-central-1:728951503198:instance/i-09c199bdd3c59b4ec",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-untrusted-ingress-host-profile",
            "id": "i-09c199bdd3c59b4ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sky-untrusted",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc88af6f79036616",
            "private_dns": "ip-172-17-21-30.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.21.30",
            "public_dns": "ec2-51-84-6-194.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.6.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031df82976dce6839",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06810699da023b8db",
            "tags": {
              "Name": "poc-untrusted-ingress-host"
            },
            "tags_all": {
              "Name": "poc-untrusted-ingress-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ddc3e9e31839e16"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_ingress_docker_host.aws_iam_instance_profile.ec2_profile",
            "module.untrusted_ingress_docker_host.aws_iam_role.ec2_role",
            "module.untrusted_ingress_docker_host.aws_security_group.this",
            "module.untrusted_ingress_docker_host.data.aws_ami.selected",
            "module.untrusted_vpc_streaming_ingress.aws_subnet.this",
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_ingress_docker_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-07ddc3e9e31839e16",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ddc3e9e31839e16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-untrusted-ingress-host-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-untrusted-ingress-host-sg"
            },
            "tags_all": {
              "Name": "poc-untrusted-ingress-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860d446fe8e0e74c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_scrub_docker_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec793dddc766d9ac",
            "arn": "arn:aws:ec2:il-central-1:728951503198:instance/i-0768bcc68bc1c9bca",
            "associate_public_ip_address": false,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-untrusted-scrub-host-profile",
            "id": "i-0768bcc68bc1c9bca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sky-untrusted",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e6f4ffafbacfb92",
            "private_dns": "ip-172-17-22-16.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.22.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e243c24a641e52e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f69dbf4546bb28c",
            "tags": {
              "Name": "poc-untrusted-scrub-host"
            },
            "tags_all": {
              "Name": "poc-untrusted-scrub-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008bb5a18db881d9d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_scrub_docker_host.aws_iam_instance_profile.ec2_profile",
            "module.untrusted_scrub_docker_host.aws_iam_role.ec2_role",
            "module.untrusted_scrub_docker_host.aws_security_group.this",
            "module.untrusted_scrub_docker_host.data.aws_ami.selected",
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this",
            "module.untrusted_vpc_streaming_scrub.aws_subnet.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_scrub_docker_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:security-group/sg-008bb5a18db881d9d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008bb5a18db881d9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.21.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/22"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-untrusted-scrub-host-sg",
            "name_prefix": "",
            "owner_id": "728951503198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-untrusted-scrub-host-sg"
            },
            "tags_all": {
              "Name": "poc-untrusted-scrub-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0573e2991b5906dbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64513,
            "arn": "arn:aws:ec2:il-central-1:728951503198:transit-gateway/tgw-09c5299d2037664e9",
            "association_default_route_table_id": "tgw-rtb-0cb6d8cd6a74edb87",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "TGW for the Untrusted IL Environment",
            "dns_support": "enable",
            "id": "tgw-09c5299d2037664e9",
            "multicast_support": "disable",
            "owner_id": "728951503198",
            "propagation_default_route_table_id": "tgw-rtb-0cb6d8cd6a74edb87",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "poc-untrusted"
            },
            "tags_all": {
              "Name": "poc-untrusted"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba583becbcfdb65f",
            "arn": "arn:aws:ec2:il-central-1:728951503198:elastic-ip/eipalloc-0ba583becbcfdb65f",
            "association_id": "eipassoc-0fc7226bc3f27060a",
            "domain": "vpc",
            "id": "eipalloc-0ba583becbcfdb65f",
            "network_border_group": "il-central-1",
            "network_interface": "eni-05ca7f5a8d9dd6890",
            "private_dns": "ip-172-17-24-27.il-central-1.compute.internal",
            "private_ip": "172.17.24.27",
            "public_dns": "ec2-51-84-98-82.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.98.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-poc-untrusted-devops"
            },
            "tags_all": {
              "Name": "eip-nat-poc-untrusted-devops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:internet-gateway/igw-0b687c4f5c48973aa",
            "id": "igw-0b687c4f5c48973aa",
            "owner_id": "728951503198",
            "tags": {
              "Name": "igw-poc-untrusted-devops"
            },
            "tags_all": {
              "Name": "igw-poc-untrusted-devops"
            },
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba583becbcfdb65f",
            "association_id": "eipassoc-0fc7226bc3f27060a",
            "connectivity_type": "public",
            "id": "nat-0c65da336d71c6be2",
            "network_interface_id": "eni-05ca7f5a8d9dd6890",
            "private_ip": "172.17.24.27",
            "public_ip": "51.84.98.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b70c1d29e2886c74",
            "tags": {
              "Name": "nat-poc-untrusted-devops"
            },
            "tags_all": {
              "Name": "nat-poc-untrusted-devops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-0299814943bb013ad",
            "id": "rtb-0299814943bb013ad",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c65da336d71c6be2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-untrusted-devops-private"
            },
            "tags_all": {
              "Name": "rt-poc-untrusted-devops-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_nat_gateway.nat",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-05b8e1e5943b97fb0",
            "id": "rtb-05b8e1e5943b97fb0",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b687c4f5c48973aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-untrusted-devops-public"
            },
            "tags_all": {
              "Name": "rt-poc-untrusted-devops-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06df2228384cb4afe",
            "route_table_id": "rtb-0299814943bb013ad",
            "subnet_id": "subnet-02745e545c814672b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_nat_gateway.nat",
            "module.untrusted_vpc_devops.aws_route_table.private",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        },
        {
          "index_key": "endpoints",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d21f672458389af9",
            "route_table_id": "rtb-0299814943bb013ad",
            "subnet_id": "subnet-04d1e3cef57e559e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_nat_gateway.nat",
            "module.untrusted_vpc_devops.aws_route_table.private",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2960ab5a37e1ed1",
            "route_table_id": "rtb-05b8e1e5943b97fb0",
            "subnet_id": "subnet-0b70c1d29e2886c74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-02745e545c814672b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.24.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02745e545c814672b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-devops-agent"
            },
            "tags_all": {
              "Name": "poc-untrusted-devops-agent"
            },
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        },
        {
          "index_key": "endpoints",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-04d1e3cef57e559e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.24.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d1e3cef57e559e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-devops-endpoints"
            },
            "tags_all": {
              "Name": "poc-untrusted-devops-endpoints"
            },
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-0b70c1d29e2886c74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.24.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b70c1d29e2886c74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-devops-nat"
            },
            "tags_all": {
              "Name": "poc-untrusted-devops-nat"
            },
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_devops.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0c03f261f8d8cc103",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.24.0/24",
            "default_network_acl_id": "acl-010f2e295ec2a9d10",
            "default_route_table_id": "rtb-0ded2ad92be494172",
            "default_security_group_id": "sg-05d0bdb592d22a2d9",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c03f261f8d8cc103",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ded2ad92be494172",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-untrusted-devops"
            },
            "tags_all": {
              "Name": "poc-untrusted-devops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_devops",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc-endpoint/vpce-09138e8bf8f0354ae",
            "dns_entry": [
              {
                "dns_name": "vpce-09138e8bf8f0354ae-prhjhhub.api.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-09138e8bf8f0354ae-prhjhhub-il-central-1a.api.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "api.ecr.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z060176524UKJ863AZN2H"
              },
              {
                "dns_name": "ecr.il-central-1.api.aws",
                "hosted_zone_id": "Z05998881TG56AEQN2TI9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09138e8bf8f0354ae",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b1abe598383f85b"
            ],
            "owner_id": "728951503198",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::728951503198:root\"},\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05d0bdb592d22a2d9"
            ],
            "service_name": "com.amazonaws.il-central-1.ecr.api",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.17.24.72",
                "subnet_id": "subnet-04d1e3cef57e559e1"
              }
            ],
            "subnet_ids": [
              "subnet-04d1e3cef57e559e1"
            ],
            "tags": {
              "Name": "vpce-poc-untrusted-devops-ecr-api"
            },
            "tags_all": {
              "Name": "vpce-poc-untrusted-devops-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_nat_gateway.nat",
            "module.untrusted_vpc_devops.aws_route_table.private",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this",
            "module.untrusted_vpc_devops.data.aws_caller_identity.current",
            "module.untrusted_vpc_devops.data.aws_iam_policy_document.vpc_endpoint_policy"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc-endpoint/vpce-05af80d03cc5b8ec8",
            "dns_entry": [
              {
                "dns_name": "vpce-05af80d03cc5b8ec8-41uag5rn.dkr.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "vpce-05af80d03cc5b8ec8-41uag5rn-il-central-1a.dkr.ecr.il-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z027342621GTOZWRYL3UZ"
              },
              {
                "dns_name": "dkr.ecr.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z0885359FFWQPTN9YVPO"
              },
              {
                "dns_name": "*.dkr.ecr.il-central-1.amazonaws.com",
                "hosted_zone_id": "Z0885359FFWQPTN9YVPO"
              },
              {
                "dns_name": "dkr-ecr.il-central-1.on.aws",
                "hosted_zone_id": "Z061557617Y2667Y0QL3J"
              },
              {
                "dns_name": "*.dkr-ecr.il-central-1.on.aws",
                "hosted_zone_id": "Z061557617Y2667Y0QL3J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05af80d03cc5b8ec8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ca128f8df14704ff"
            ],
            "owner_id": "728951503198",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::728951503198:root\"},\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05d0bdb592d22a2d9"
            ],
            "service_name": "com.amazonaws.il-central-1.ecr.dkr",
            "service_region": "il-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.17.24.87",
                "subnet_id": "subnet-04d1e3cef57e559e1"
              }
            ],
            "subnet_ids": [
              "subnet-04d1e3cef57e559e1"
            ],
            "tags": {
              "Name": "vpce-poc-untrusted-devops-ecr-dkr"
            },
            "tags_all": {
              "Name": "vpce-poc-untrusted-devops-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_nat_gateway.nat",
            "module.untrusted_vpc_devops.aws_route_table.private",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this",
            "module.untrusted_vpc_devops.data.aws_caller_identity.current",
            "module.untrusted_vpc_devops.data.aws_iam_policy_document.vpc_endpoint_policy"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc-endpoint/vpce-0ff1b059787735167",
            "cidr_blocks": [
              "16.12.12.0/23",
              "3.5.56.0/22",
              "16.12.14.0/24"
            ],
            "id": "vpce-0ff1b059787735167",
            "owner_id": "728951503198",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"arn:aws:iam::728951503198:root\"},\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-8fa045e6",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0299814943bb013ad"
            ],
            "service_name": "com.amazonaws.il-central-1.s3",
            "service_region": "il-central-1",
            "state": "available",
            "tags": {
              "Name": "vpce-poc-untrusted-devops-s3"
            },
            "tags_all": {
              "Name": "vpce-poc-untrusted-devops-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c03f261f8d8cc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_devops.aws_eip.nat",
            "module.untrusted_vpc_devops.aws_internet_gateway.this",
            "module.untrusted_vpc_devops.aws_nat_gateway.nat",
            "module.untrusted_vpc_devops.aws_route_table.private",
            "module.untrusted_vpc_devops.aws_route_table.public",
            "module.untrusted_vpc_devops.aws_route_table_association.public",
            "module.untrusted_vpc_devops.aws_subnet.this",
            "module.untrusted_vpc_devops.aws_vpc.this",
            "module.untrusted_vpc_devops.data.aws_caller_identity.current",
            "module.untrusted_vpc_devops.data.aws_iam_policy_document.vpc_endpoint_policy"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b26025188dd17965",
            "arn": "arn:aws:ec2:il-central-1:728951503198:elastic-ip/eipalloc-0b26025188dd17965",
            "association_id": "eipassoc-0811973136fc5d21a",
            "domain": "vpc",
            "id": "eipalloc-0b26025188dd17965",
            "network_border_group": "il-central-1",
            "network_interface": "eni-0c9a4949d99daf735",
            "private_dns": "ip-172-17-23-11.il-central-1.compute.internal",
            "private_ip": "172.17.23.11",
            "public_dns": "ec2-51-84-32-141.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.32.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-poc-untrusted-iot"
            },
            "tags_all": {
              "Name": "eip-nat-poc-untrusted-iot"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:internet-gateway/igw-07fb23e7c4d297bc3",
            "id": "igw-07fb23e7c4d297bc3",
            "owner_id": "728951503198",
            "tags": {
              "Name": "igw-poc-untrusted-iot"
            },
            "tags_all": {
              "Name": "igw-poc-untrusted-iot"
            },
            "vpc_id": "vpc-09a0a2502334ee367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b26025188dd17965",
            "association_id": "eipassoc-0811973136fc5d21a",
            "connectivity_type": "public",
            "id": "nat-00bab32ef478e576f",
            "network_interface_id": "eni-0c9a4949d99daf735",
            "private_ip": "172.17.23.11",
            "public_ip": "51.84.32.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053b71b0d72b3f05f",
            "tags": {
              "Name": "nat-poc-untrusted-iot"
            },
            "tags_all": {
              "Name": "nat-poc-untrusted-iot"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_iot.aws_eip.nat",
            "module.untrusted_vpc_iot.aws_internet_gateway.this",
            "module.untrusted_vpc_iot.aws_route_table.public",
            "module.untrusted_vpc_iot.aws_route_table_association.public",
            "module.untrusted_vpc_iot.aws_subnet.this",
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-024c9ae9280eefd2f",
            "id": "rtb-024c9ae9280eefd2f",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00bab32ef478e576f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-untrusted-iot-private"
            },
            "tags_all": {
              "Name": "rt-poc-untrusted-iot-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0a2502334ee367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_iot.aws_eip.nat",
            "module.untrusted_vpc_iot.aws_internet_gateway.this",
            "module.untrusted_vpc_iot.aws_nat_gateway.nat",
            "module.untrusted_vpc_iot.aws_route_table.public",
            "module.untrusted_vpc_iot.aws_route_table_association.public",
            "module.untrusted_vpc_iot.aws_subnet.this",
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-0843c231417970d02",
            "id": "rtb-0843c231417970d02",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fb23e7c4d297bc3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-untrusted-iot-public"
            },
            "tags_all": {
              "Name": "rt-poc-untrusted-iot-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0a2502334ee367"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_iot.aws_internet_gateway.this",
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3794907f78096a3",
            "route_table_id": "rtb-024c9ae9280eefd2f",
            "subnet_id": "subnet-0e7892d18c6aaa395"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_iot.aws_eip.nat",
            "module.untrusted_vpc_iot.aws_internet_gateway.this",
            "module.untrusted_vpc_iot.aws_nat_gateway.nat",
            "module.untrusted_vpc_iot.aws_route_table.private",
            "module.untrusted_vpc_iot.aws_route_table.public",
            "module.untrusted_vpc_iot.aws_route_table_association.public",
            "module.untrusted_vpc_iot.aws_subnet.this",
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1ffbd7f96b618a",
            "route_table_id": "rtb-0843c231417970d02",
            "subnet_id": "subnet-053b71b0d72b3f05f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_iot.aws_internet_gateway.this",
            "module.untrusted_vpc_iot.aws_route_table.public",
            "module.untrusted_vpc_iot.aws_subnet.this",
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-0e7892d18c6aaa395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.23.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7892d18c6aaa395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-iot-app"
            },
            "tags_all": {
              "Name": "poc-untrusted-iot-app"
            },
            "vpc_id": "vpc-09a0a2502334ee367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-053b71b0d72b3f05f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.23.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053b71b0d72b3f05f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-iot-nat"
            },
            "tags_all": {
              "Name": "poc-untrusted-iot-nat"
            },
            "vpc_id": "vpc-09a0a2502334ee367"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_iot.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_iot",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-09a0a2502334ee367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.23.0/24",
            "default_network_acl_id": "acl-048e8f0cd3d3277f2",
            "default_route_table_id": "rtb-0c819361840f85f5f",
            "default_security_group_id": "sg-020bec821b5dfabcc",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a0a2502334ee367",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c819361840f85f5f",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-untrusted-iot"
            },
            "tags_all": {
              "Name": "poc-untrusted-iot"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_ingress",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:internet-gateway/igw-07b31b3b9e727a8ea",
            "id": "igw-07b31b3b9e727a8ea",
            "owner_id": "728951503198",
            "tags": {
              "Name": "igw-poc-untrusted-streaming-ingress"
            },
            "tags_all": {
              "Name": "igw-poc-untrusted-streaming-ingress"
            },
            "vpc_id": "vpc-0860d446fe8e0e74c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_ingress",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-0ee522df538e316c6",
            "id": "rtb-0ee522df538e316c6",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b31b3b9e727a8ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-poc-untrusted-streaming-ingress-public"
            },
            "tags_all": {
              "Name": "rt-poc-untrusted-streaming-ingress-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0860d446fe8e0e74c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_streaming_ingress.aws_internet_gateway.this",
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_ingress",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b21387b93f7aa22",
            "route_table_id": "rtb-0ee522df538e316c6",
            "subnet_id": "subnet-06810699da023b8db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_streaming_ingress.aws_internet_gateway.this",
            "module.untrusted_vpc_streaming_ingress.aws_route_table.public",
            "module.untrusted_vpc_streaming_ingress.aws_subnet.this",
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_ingress",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-06810699da023b8db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.21.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06810699da023b8db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-streaming-ingress-ec2"
            },
            "tags_all": {
              "Name": "poc-untrusted-streaming-ingress-ec2"
            },
            "vpc_id": "vpc-0860d446fe8e0e74c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_streaming_ingress.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_ingress",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0860d446fe8e0e74c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.21.0/24",
            "default_network_acl_id": "acl-0b3878a4ce94bbd60",
            "default_route_table_id": "rtb-04e6a4f0669ff47c5",
            "default_security_group_id": "sg-0558acee27cfec317",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0860d446fe8e0e74c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e6a4f0669ff47c5",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-untrusted-streaming-ingress"
            },
            "tags_all": {
              "Name": "poc-untrusted-streaming-ingress"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:network-acl/acl-0ff1de5e7e6333231",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ff1de5e7e6333231",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 210,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 9999,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 10099,
                "to_port": 9999
              },
              {
                "action": "allow",
                "cidr_block": "172.31.0.0/22",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              }
            ],
            "owner_id": "728951503198",
            "subnet_ids": [
              "subnet-02f69dbf4546bb28c"
            ],
            "tags": {
              "Name": "poc-untrusted-streaming-scrub-nacl"
            },
            "tags_all": {
              "Name": "poc-untrusted-streaming-scrub-nacl"
            },
            "vpc_id": "vpc-0573e2991b5906dbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_streaming_scrub.aws_subnet.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:route-table/rtb-01f1cb71a35da1788",
            "id": "rtb-01f1cb71a35da1788",
            "owner_id": "728951503198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.13.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0ec858bb6718ecb06"
              }
            ],
            "tags": {
              "Name": "rt-poc-untrusted-streaming-scrub-private"
            },
            "tags_all": {
              "Name": "rt-poc-untrusted-streaming-scrub-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0573e2991b5906dbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_streaming_scrub.aws_eip.nat",
            "module.untrusted_vpc_streaming_scrub.aws_internet_gateway.this",
            "module.untrusted_vpc_streaming_scrub.aws_nat_gateway.nat",
            "module.untrusted_vpc_streaming_scrub.aws_route_table.public",
            "module.untrusted_vpc_streaming_scrub.aws_route_table_association.public",
            "module.untrusted_vpc_streaming_scrub.aws_subnet.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042205e6045c5587e",
            "route_table_id": "rtb-01f1cb71a35da1788",
            "subnet_id": "subnet-02f69dbf4546bb28c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_tgw.aws_ec2_transit_gateway.this",
            "module.untrusted_vpc_streaming_scrub.aws_eip.nat",
            "module.untrusted_vpc_streaming_scrub.aws_internet_gateway.this",
            "module.untrusted_vpc_streaming_scrub.aws_nat_gateway.nat",
            "module.untrusted_vpc_streaming_scrub.aws_route_table.private",
            "module.untrusted_vpc_streaming_scrub.aws_route_table.public",
            "module.untrusted_vpc_streaming_scrub.aws_route_table_association.public",
            "module.untrusted_vpc_streaming_scrub.aws_subnet.this",
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:subnet/subnet-02f69dbf4546bb28c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "172.17.22.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f69dbf4546bb28c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728951503198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-untrusted-streaming-scrub-app"
            },
            "tags_all": {
              "Name": "poc-untrusted-streaming-scrub-app"
            },
            "vpc_id": "vpc-0573e2991b5906dbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.untrusted_vpc_streaming_scrub.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.untrusted_vpc_streaming_scrub",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:728951503198:vpc/vpc-0573e2991b5906dbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.22.0/24",
            "default_network_acl_id": "acl-06ea330f052c5dc51",
            "default_route_table_id": "rtb-01033d61772afe612",
            "default_security_group_id": "sg-03856775f0983a752",
            "dhcp_options_id": "dopt-0e84e50659a3d7a52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0573e2991b5906dbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01033d61772afe612",
            "owner_id": "728951503198",
            "tags": {
              "Name": "poc-untrusted-streaming-scrub"
            },
            "tags_all": {
              "Name": "poc-untrusted-streaming-scrub"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}